temas 3 y 4/ejem-3-canary-istio/helloworld-virtualservice-v3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
  - "*"
  gateways:
  - helloworld-gateway
  http:
  - match:
    - uri:
        exact: /hello
    route:
    - destination:
        host: helloworld
        subset: v1
        port:
          number: 5000
      weight: 0
    - destination:
        host: helloworld
        subset: v2
        port:
          number: 5000
      weight: 100
